--- a/chrome/locale/en-US/options.dtd
+++ b/chrome/locale/en-US/options.dtd
@@ -6,7 +6,7 @@
 <!ENTITY plainTextUrls.label "Plain Text URLs">
 <!ENTITY htmlAnchors.label "HTML Anchors">
 <!ENTITY linkedList.label "Linked List">
-<!ENTITY autoCopy.label ">Automatically Copy">
+<!ENTITY autoCopy.label "Automatically Copy">
 <!ENTITY autoCopyExplaination.p "Copies the list of URLs when the main dialog is opened. Warning: overwrites clipboard contents.">
 <!ENTITY openOnPaste.label "Open Tabs when Paste is clicked">
 <!ENTITY openOnPaste.p "If you click the paste button, the URLs in the clipboard are automatiacally opened(you don't have to press the OK button)">
